public class Monstre extends Personnage{
    private String m_espece;
    private int m_numero;
    private int m_classeArmure;
}
