@startuml
'https://plantuml.com/class-diagram
skinparam style strictuml

class Arme{
    -m_poids : Integer
    -m_porte : Integer
    -m_degats : Integer
}

note left of Arme
m_poids : 0 = légère
                 1 = lourde
end note

class Armure{
    -m_poids : Integer
    -m_defense : Integer
}

note left of Armure
m_poids : 0 = légère
                 1 = lourde
end note

class Personnage{
    -m_nom : String
}

class Joueur{

}

class Monstre {
    -m_espece : String
    -m_numero : Integer

}

class Classe {
    -m_nom : String
    -m_pv :  Integer
    +getArmes() : Arme[*]
    +getArmures() : Armure[*]
    +setArmes() : void
    +setArmures() : void
}

class Race{
    -m_nom
}

Personnage <|-- Joueur
Personnage <|-- Monstre
Joueur "*" <--* "1\n-m_classe" Classe :  est de la classe >
Classe "1" <--o "*\n-m_arme" Arme :  est dans les armes de base de >
Classe "1" <--o "*\n-m_armure" Armure :  est dans les armures de base de >

@enduml